--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
+djangular/Lib/site-packages/pip-9.0.1.dist-info/INSTALLER
+
